--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,18 +1,55 @@
-/* body {
-    background-color: black;
-    color: blanchedalmond;
-} */
-
-.navbar {
-  display: flex;
-  justify-content: space-evenly;
-  color: black;
-  background-color: aqua;
-  padding: 20px 20px 20px 20px;
+body {
+  font-family: Jura, Arial, Helvetica, sans-serif;
+  background-color: black;
+  color: white;
 }
 
-.cardprojects {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
+a:hover {
+  background-color: white;
+  letter-spacing: 2px;
+}
+
+.navbar {
+  background-color: yellow;
+}
+
+.heroSection {
+  width: 100%;
+  height: 30vh;
+  position: relative;
+}
+
+.heroSection img {
+  width: 100%;
+  height: 100%;
+}
+
+.heroSection aside {
+  position: absolute;
+  right: 10;
+  bottom: 60px;
+  background-color: black;
+  color: white;
+}
+
+.card {
+  width: 30%;
+  /* max-width: 33%; */
+  margin: 1%;
+  padding: 2%;
+  min-width: 300px !important;
+}
+
+nav ul {
+  list-style: none;
+}
+
+.skills {
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0;
+}
+
+.nav-link {
+  color: white;
 }
